--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
         </li>
         
         <li class="list-portfolio">
-          <img src="./images/img-5.jpg"
+          <img src="./imeges/img-5.jpg"
           alt="of"
           width="360"
           height="300">
@@ -211,11 +211,13 @@
 
 </main>
 
- <div class="container">  
+   
    <footer class="end">
-      <a class="logotype" href="./index.html">Web<span class="logotype-span-foot">Studio</span></a>
+    <div class="container">
+      <a class="logotype" href="./index.html">Web<sspan class="logotype-span-foot">Studio</span></a>
        <p class="text-end">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
-    </footer>
- </div>  
+    </div> 
+  </footer>
+     
 </body>
 </html>
