--- a/index.html
+++ b/index.html
@@ -212,12 +212,11 @@
 </main>
 
    
-   <footer class="end">
-    <div class="container">
-      <a class="logotype" href="./index.html">Web<sspan class="logotype-span-foot">Studio</span></a>
-       <p class="text-end">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
-    </div> 
-  </footer>
+<footer class="end">
+  <a class="logotype" href="./index.html">Web<span class="logotype-span-foot">Studio</span></a>
+
+<p class="text-end">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+</footer>
      
 </body>
 </html>
