--- a/index.html
+++ b/index.html
@@ -35,33 +35,36 @@
 
 </head>
 <body class="body">
-<header class="page-header container"> 
-  <nav class="page-navigation">
-    <a class="logotype" href="./index.html">Web<span class="logotype-span">Studio</span></a>
+
+<header class="page-header"> 
+  <div class="container"> 
+   <nav class="page-navigation">
+    <a class="logotype" href="./index.html">web<span class="logotype-span">Studio</span></a>
     <ul class="menu">
       <li class="menu-item"> 
-        <a class="menu-link" href="./index.html">Studio</a>
+        <a class="menu-link" href="./index.html">studio</a>
         </li>
       <li class="menu-item"> 
-        <a class="menu-link" href="">Portfolio</a>
+        <a class="menu-link" href="">portfolio</a>
         </li>
       <li class="menu-item"> 
-        <a class="menu-link" href="">Contacts</a>
+        <a class="menu-link" href="">contacts</a>
         </li>
     </ul>
-  </nav>
+   </nav>
     <address class="hedear-addres" id="cont"> 
       <ul class="list"> 
         <li class="contact-list">
           <a class="menu-contact" href="mailto:info@devstudio.com">info@devstudio.com</a>
-          <p>info@devstudio.com</p>
         </li>
         <li class="contact-list">
           <a class="menu-contact" href="tel:+110001111111">+11 (000) 111-11-11</a>
         </li>
       </ul>
     </address>
+  </div>
 </header>
+
 <main> 
 
 
