--- a/index.html
+++ b/index.html
@@ -224,9 +224,11 @@
 
    
 <footer class="end">
-  <a class="logotype" href="./index.html">Web<span class="logotype-span-foot">Studio</span></a>
+  <div class="container">
+   <a class="logotype" href="./index.html">Web<span class="logotype-span-foot">Studio</span></a>
 
-<p class="text-end">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+   <p class="text-end">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+ </div>
 </footer>
      
 </body>
