--- a/index.html
+++ b/index.html
@@ -18,22 +18,22 @@
 
 
 
-<link rel="stylesheet" href="https://fonts.gstatic.com"> 
+ <link rel="stylesheet" href="https://fonts.gstatic.com"> 
 
-<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+ <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Raleway&display=swap" rel="stylesheet">
+ <link rel="preconnect" href="https://fonts.googleapis.com">
+ <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+ <link href="https://fonts.googleapis.com/css2?family=Raleway&display=swap" rel="stylesheet">
 
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+ <link rel="preconnect" href="https://fonts.googleapis.com">
+ <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+ <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+</head> 
 
 
 
- <!--Heeder-->
-</head>
+<!--Heeder-->
 <body class="body">
 <header class="page-header"> 
   <div class="container"> 
@@ -57,7 +57,7 @@
            <a class="menu-contact" href="mailto:info@devstudio.com">info@devstudio.com</a>
          </li>
          <li class="contact-list">
-           <a class="menu-contact" href="tel:+110001111111">+11 (000) 111-11-11</a>
+           <a class="menu-contact" href="tel:+110001111111">+11(000)111-11-11</a>
          </li>
        </ul>
      </address>
@@ -88,7 +88,7 @@
      <!--section 1-->
    <section class="benefits">
      <div class="container">
-       <h2 class="made-benefits">our strong positions</h2>
+       <h2 class>our strong positions</h2>
        <ul class="made-menu">
          <li class="made-menu-item">
             <h3 class="made-menu-item-name">strategy</h3>
