--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
          </li>
      </ul>
    
-     <address class="hedear-addres" id="cont"> 
+     <address class="hedear-address" id="cont"> 
        <ul class="list"> 
          <li class="contact-list">
            <a class="menu-contact" href="mailto:info@devstudio.com">info@devstudio.com</a>
