--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
          </li>
      </ul>
    
-     <address class="hedear-address" id="cont"> 
+     <address class="hedear-address" id="contact"> 
        <ul class="list"> 
          <li class="contact-list">
            <a class="menu-contact" href="mailto:info@devstudio.com">info@devstudio.com</a>
@@ -70,7 +70,7 @@
 
 
 
-    <!--Hero-->
+    <!--section 1-->
     
     <section class="hero-image">
       <div class="container">
@@ -85,7 +85,7 @@
 
 
 
-     <!--section 1-->
+     <!--section 2-->
    <section class="benefits">
      <div class="container">
        <h2 class>our strong positions</h2>
@@ -116,10 +116,11 @@
 
 
 
-     <!--section 2-->
+     <!--section 3-->
      <section class="our-team">
       <div class="container">
        <h2 class="our-team-title">Our Team</h2>
+       <div>
        <ul class="our-team-name">
          <li class="our-team-list">
              <img src="./imeges/mark.jpg" alt="mark"
@@ -151,6 +152,7 @@
           </li> 
        </ul>
       </div>
+      </div>
     </section>
   
 
@@ -158,7 +160,7 @@
 
 
 
-     <!--secton 3-->
+     <!--secton 4-->
     <section class="section-portfolio">
      <div class="container">
       <h2 class="section-title">Our Portfolio</h2>
