--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
          </li>
      </ul>
    
-     <address class="hedear-address" id="contact"> 
+     <address class="hedear-address" id="cont"> 
        <ul class="list"> 
          <li class="contact-list">
            <a class="menu-contact" href="mailto:info@devstudio.com">info@devstudio.com</a>
@@ -120,7 +120,6 @@
      <section class="our-team">
       <div class="container">
        <h2 class="our-team-title">Our Team</h2>
-       <div>
        <ul class="our-team-name">
          <li class="our-team-list">
              <img src="./imeges/mark.jpg" alt="mark"
@@ -151,7 +150,6 @@
            <p class="introduce">UI Designer</p>
           </li> 
        </ul>
-      </div>
       </div>
     </section>
   
