--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
      <!--section 2-->
    <section class="benefits">
      <div class="container">
-       <h2 class>our strong positions</h2>
+       <h2 class="visually-hidden">feauteres</h2>
        <ul class="made-menu">
          <li class="made-menu-item">
             <h3 class="made-menu-item-name">strategy</h3>
@@ -177,8 +177,10 @@
           alt="cashless"
           width="360"
           height="300">
-          <h3 class="portfolio-name">Cashless Payment</h3>
-          <p class="portfolio-type">Marketing</p>
+          <div>
+            <h3 class="portfolio-name">Cashless Payment</h3>
+            <p class="portfolio-type">Marketing</p>
+         </div>
         </li>
 
         <li class="list-portfolio">
@@ -186,8 +188,10 @@
           alt="meditation"
           width="360"
           height="300">
-          <h3 class="portfolio-name">Meditation App</h3>
-          <p class="portfolio-type">App</p>
+          <div> 
+            <h3 class="portfolio-name">Meditation App</h3>
+            <p class="portfolio-type">App</p>
+          </div>
         </li>
 
         <li class="list-portfolio">
@@ -195,8 +199,10 @@
           alt="taxi"
           width="360"
           height="300">
-          <h3 class="portfolio-name">Taxi Service</h3>
-          <p class="portfolio-type">Marketing</p>
+          <div>
+            <h3 class="portfolio-name">Taxi Service</h3>
+            <p class="portfolio-type">Marketing</p>
+          </div>
         </li>
 
         <li class="list-portfolio">
@@ -204,8 +210,10 @@
           alt="screen"
           width="360"
           height="300">
-          <h3 class="portfolio-name">Screen Illustrations</h3>
-          <p class="portfolio-type">Design</p>
+          <div>
+            <h3 class="portfolio-name">Screen Illustrations</h3>
+            <p class="portfolio-type">Design</p>
+         </div>
         </li>
         
         <li class="list-portfolio">
@@ -213,8 +221,10 @@
           alt="of"
           width="360"
           height="300">
-          <h3 class="portfolio-name">Online Courses</h3>
-          <p class="portfolio-type">Marketing</p>
+          <div>
+            <h3 class="portfolio-name">Online Courses</h3>
+            <p class="portfolio-type">Marketing</p>
+         </div>
         </li>
       </ul>
      </div>
@@ -225,8 +235,8 @@
     <!--Footer-->
 <footer class="end">
  <div class="container">
+    
    <a class="logotype" href="./index.html">Web<span class="logotype-span-foot">Studio</span></a>
-
    <p class="text-end">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
  </div>
 </footer>
