--- a/index.html
+++ b/index.html
@@ -233,9 +233,8 @@
 </main>
 
     <!--Footer-->
-<footer class="end">
- <div class="container">
-    
+<footer class="end" class="display">
+ <div class="container"> 
    <a class="logotype" href="./index.html">Web<span class="logotype-span-foot">Studio</span></a>
    <p class="text-end">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
  </div>
