--- a/index.html
+++ b/index.html
@@ -125,29 +125,37 @@
              <img src="./imeges/mark.jpg" alt="mark"
                 width="264" 
                 height="260">
-            <h3 class="name">Mark Guerrero</h3>
-            <p class="introduce">Product Designer</p>
+                <div class="name-introduse">
+                  <h3 class="name">Mark Guerrero</h3>
+                  <p class="introduce">Product Designer</p>
+                </div>
           </li> 
           <li class="our-team-list">
            <img src="./imeges/tom.jpg" alt="tom"
             width="264" 
             height="260">
-           <h3 class="name">Tom Ford</h3>
-           <p class="introduce">Frontend Developer</p>
+            <div>
+             <h3 class="name">Tom Ford</h3>
+             <p class="introduce">Frontend Developer</p>
+            </div>
           </li> 
           <li class="our-team-list">
              <img src="./imeges/camila.jpg" alt="camila"
             width="264" 
             height="260">
-            <h3 class="name">Camila Garcia</h3>
-            <p class="introduce">Marketing</p>
+            <div>
+              <h3 class="name">Camila Garcia</h3>
+              <p class="introduce">Marketing</p>
+            </div>
           </li> 
           <li class="our-team-list">
              <img src="./imeges/daniel.jpg" alt="daniel"
             width="264" 
             height="260">
-           <h3 class="name">Daniel Wilson</h3>
-           <p class="introduce">UI Designer</p>
+            <div>
+             <h3 class="name">Daniel Wilson</h3>
+             <p class="introduce">UI Designer</p>
+            </div>
           </li> 
        </ul>
       </div>
@@ -168,8 +176,10 @@
           alt="banking"
           width="360"
           height="300">
-          <h3 class="portfolio-name">Banking App</h3>
-          <p class="portfolio-type">App</p>
+          <div>
+            <h3 class="portfolio-name">Banking App</h3>
+            <p class="portfolio-type">App</p>
+          </div>
         </li>
 
         <li class="list-portfolio">
@@ -233,7 +243,7 @@
 </main>
 
     <!--Footer-->
-<footer class="end" class="display">
+<footer class="end">
  <div class="container"> 
    <a class="logotype" href="./index.html">Web<span class="logotype-span-foot">Studio</span></a>
    <p class="text-end">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
