--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
      </ul>
    
      <address class="hedear-address"> 
-       <ul class="list"> 
+       <ul class="adress-list"> 
          <li class="contact-list">
            <a class="menu-contact" href="mailto:info@devstudio.com">info@devstudio.com</a>
          </li>
