--- a/index.html
+++ b/index.html
@@ -35,35 +35,35 @@
 
 <!--Heeder-->
 <body class="body">
-<header class="page-header"> 
-  <div class="container"> 
-   <nav class="page-navigation">
-     <a class="logotype" href="./index.html">web<span class="logotype-span">Studio</span></a>
-     <ul class="menu">
-       <li class="menu-item"> 
-           <a class="menu-link" href="./index.html">studio</a>
-         </li>
-        <li class="menu-item"> 
-           <a class="menu-link" href="">portfolio</a>
-         </li>
+  <header class="page-header"> 
+    <div class="container"> 
+     <nav class="page-navigation">
+       <a class="logotype" href="./index.html">web<span class="logotype-span">Studio</span></a>
+       <ul class="menu">
          <li class="menu-item"> 
-            <a class="menu-link" href="">contacts</a>
-         </li>
-     </ul>
-   
-     <address class="hedear-address"> 
-       <ul class="adress-list"> 
-         <li class="contact-list">
-           <a class="menu-contact" href="mailto:info@devstudio.com">info@devstudio.com</a>
-         </li>
-         <li class="contact-list">
-           <a class="menu-contact" href="tel:+110001111111">+11(000)111-11-11</a>
-         </li>
+             <a class="menu-link" href="./index.html">studio</a>
+           </li>
+          <li class="menu-item"> 
+             <a class="menu-link" href="">portfolio</a>
+           </li>
+           <li class="menu-item"> 
+              <a class="menu-link" href="">contacts</a>
+           </li>
        </ul>
-     </address>
-    </nav>
-  </div>
-</header>
+     
+       <address class="hedear-address"> 
+         <ul class="adress-list"> 
+           <li class="contact-list">
+             <a class="menu-contact" href="mailto:info@devstudio.com">info@devstudio.com</a>
+           </li>
+           <li class="contact-list">
+             <a class="menu-contact" href="tel:+110001111111">+11(000)111-11-11</a>
+           </li>
+         </ul>
+       </address>
+      </nav>
+    </div>
+  </header>
 
 <main> 
 
@@ -134,7 +134,7 @@
            <img src="./imeges/tom.jpg" alt="tom"
             width="264" 
             height="260">
-            <div>
+            <div class="name-introduse">
              <h3 class="name">Tom Ford</h3>
              <p class="introduce">Frontend Developer</p>
             </div>
@@ -143,7 +143,7 @@
              <img src="./imeges/camila.jpg" alt="camila"
             width="264" 
             height="260">
-            <div>
+            <div class="name-introduse">
               <h3 class="name">Camila Garcia</h3>
               <p class="introduce">Marketing</p>
             </div>
@@ -152,7 +152,7 @@
              <img src="./imeges/daniel.jpg" alt="daniel"
             width="264" 
             height="260">
-            <div>
+            <div class="name-introduse">
              <h3 class="name">Daniel Wilson</h3>
              <p class="introduce">UI Designer</p>
             </div>
@@ -187,7 +187,7 @@
           alt="cashless"
           width="360"
           height="300">
-          <div>
+          <div >
             <h3 class="portfolio-name">Cashless Payment</h3>
             <p class="portfolio-type">Marketing</p>
          </div>
@@ -246,6 +246,7 @@
 <footer class="end">
  <div class="container"> 
    <a class="logotype" href="./index.html">Web<span class="logotype-span-foot">Studio</span></a>
+   <a class="foterlogotype"> </a>
    <p class="text-end">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
  </div>
 </footer>
