--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
             <li class="section-three-items">
               <img
                 class="section-photo"
-                src="./images/img1.jpg"
+                src="./imeges/mark.jpg"
                 alt="Product Designer"
                 width="264"
               />
@@ -132,7 +132,7 @@
             <li class="section-three-items">
               <img
                 class="section-photo"
-                src="./images/img2.jpg"
+                src="./imeges/tom.jpg"
                 alt="Frontend Developer"
                 width="264"
               />
@@ -144,7 +144,7 @@
             <li class="section-three-items">
               <img
                 class="section-photo"
-                src="./images/img3.jpg"
+                src="./imeges/camila.jpg"
                 alt="Marketing"
                 width="264"
               />
@@ -156,7 +156,7 @@
             <li class="section-three-items">
               <img
                 class="section-photo"
-                src="./images/img4.jpg"
+                src="./imeges/daniel.jpg"
                 alt="UI Designer"
                 width="264"
               />
@@ -178,7 +178,7 @@
             <li class="section-four-items">
               <img
                 class="section-photo"
-                src="./images/img11.jpg"
+                src="./imeges/img-1.jpg"
                 alt="Banking App"
                 width="360"
               />
@@ -190,7 +190,7 @@
             <li class="section-four-items">
               <img
                 class="section-photo"
-                src="./images/img22.jpg"
+                src="./imeges/img-2.jpg"
                 alt="Cashless Payment"
                 width="360"
               />
@@ -202,7 +202,7 @@
             <li class="section-four-items">
               <img
                 class="section-photo"
-                src="./images/img33.jpg"
+                src="./imeges/img-3.jpg"
                 alt="Meditaion App"
                 width="360"
               />
@@ -214,7 +214,7 @@
             <li class="section-four-items">
               <img
                 class="section-photo"
-                src="./images/img44.jpg"
+                src="./imeges/img-4.jpg"
                 alt="Taxi Service"
                 width="360"
               />
@@ -226,7 +226,7 @@
             <li class="section-four-items">
               <img
                 class="section-photo"
-                src="./images/img55.jpg"
+                src="./imeges/img-5.jpg"
                 alt="Screen Illustrations"
                 width="360"
               />
@@ -238,7 +238,7 @@
             <li class="section-four-items">
               <img
                 class="section-photo"
-                src="./images/img66.jpg"
+                src="./imeges/img.jpg"
                 alt="Online Courses"
                 width="360"
               />
