--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
             <li class="section-two-items">
               <div class="icon-section-two-main">
                 <svg class="" width="64" height="64">
-                  <use href="imeges/img-1.jpg"></use>
+                  <use href="./imeges/icons.svg#icon-antenna1"></use>
                 </svg>
               </div>
               <h3 class="section-titles">Strategy</h3>
@@ -158,7 +158,7 @@
                         width="16"
                         height="16"
                       >
-                        <use href="imeges/icons.svg"></use>
+                        <use href="./imeges/icons.svg#icon-facebook2"></use>
                       </svg>
                     </a>
                   </li>
@@ -172,7 +172,7 @@
                         width="16"
                         height="16"
                       >
-                        <use href="imeges/icons.svg"></use>
+                        <use href="./imeges/icons.svg#icon-linkedin2"></use>
                       </svg>
                     </a>
                   </li>
@@ -186,7 +186,7 @@
                         width="16"
                         height="16"
                       >
-                        <use href="imeges/icons.svg"></use>
+                        <use href="./imeges/icons.svg#icon-instagram2"></use>
                       </svg>
                     </a>
                   </li>
@@ -200,7 +200,7 @@
                         width="16"
                         height="16"
                       >
-                        <use href="imeges/icons.svg"></use>
+                        <use href="./imeges/icons.svg#icon-twitter2"></use>
                       </svg>
                     </a>
                   </li>
