--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
             <li class="section-two-items">
               <div class="icon-section-two-main">
                 <svg class="" width="64" height="64">
-                  <use href="./imeges/icons.svg#icon-antenna1"></use>
+                  <use href="./images/icons.svg#icon-antenna1"></use>
                 </svg>
               </div>
               <h3 class="section-titles">Strategy</h3>
@@ -94,7 +94,7 @@
             <li class="section-two-items">
               <div class="icon-section-two-main">
                 <svg class="" width="64" height="64">
-                  <use href="imeges/img-2.jpg"></use>
+                  <use href="./images/icons.svg#icon-clock1"></use>
                 </svg>
               </div>
               <h3 class="section-titles">Punctuality</h3>
@@ -106,7 +106,7 @@
             <li class="section-two-items">
               <div class="icon-section-two-main">
                 <svg class="" width="64" height="64">
-                  <use href="imeges/img-3.jpg"></use>
+                  <use href="./images/icons.svg#icon-diagram1"></use>
                 </svg>
               </div>
               <h3 class="section-titles">Diligence</h3>
@@ -118,7 +118,7 @@
             <li class="section-two-items">
               <div class="icon-section-two-main">
                 <svg class="" width="64" height="64">
-                  <use href="imeges/img-4.jpg"></use>
+                  <use href="./images/icons.svg#icon-astronaut1"></use>
                 </svg>
               </div>
               <h3 class="section-titles">Technologies</h3>
@@ -140,7 +140,7 @@
             <li class="section-three-items">
               <img
                 class="section-photo"
-                src="imeges/mark.jpg"
+                src="./imeges/Mark.jpg"
                 alt="Product Designer"
                 width="264"
               />
@@ -158,7 +158,7 @@
                         width="16"
                         height="16"
                       >
-                        <use href="./imeges/icons.svg#icon-facebook2"></use>
+                        <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
@@ -172,7 +172,7 @@
                         width="16"
                         height="16"
                       >
-                        <use href="./imeges/icons.svg#icon-linkedin2"></use>
+                        <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
@@ -186,7 +186,7 @@
                         width="16"
                         height="16"
                       >
-                        <use href="./imeges/icons.svg#icon-instagram2"></use>
+                        <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
@@ -200,7 +200,7 @@
                         width="16"
                         height="16"
                       >
-                        <use href="./imeges/icons.svg#icon-twitter2"></use>
+                        <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
                   </li>
@@ -210,7 +210,7 @@
             <li class="section-three-items">
               <img
                 class="section-photo"
-                src="imeges/tom.jpg"
+                src="./imeges/Tom.jpg"
                 alt="Frontend Developer"
                 width="264"
               />
@@ -228,7 +228,7 @@
                         width="16"
                         height="16"
                       >
-                        <use href="imeges/icons.svg"></use>
+                        <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
@@ -242,7 +242,7 @@
                         width="16"
                         height="16"
                       >
-                        <use href="imeges/icons.svg"></use>
+                        <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
@@ -256,7 +256,7 @@
                         width="16"
                         height="16"
                       >
-                        <use href="imeges/icons.svg"></use>
+                        <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
@@ -270,7 +270,7 @@
                         width="16"
                         height="16"
                       >
-                        <use href="imeges/icons.svg"></use>
+                        <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
                   </li>
@@ -280,7 +280,7 @@
             <li class="section-three-items">
               <img
                 class="section-photo"
-                src="imeges/camila.jpg"
+                src="./imeges/Camila.jpg"
                 alt="Marketing"
                 width="264"
               />
@@ -298,7 +298,7 @@
                         width="16"
                         height="16"
                       >
-                        <use href="imeges/icons.svg"></use>
+                        <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
@@ -312,7 +312,7 @@
                         width="16"
                         height="16"
                       >
-                        <use href="imeges/icons.svg"></use>
+                        <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
@@ -326,7 +326,7 @@
                         width="16"
                         height="16"
                       >
-                        <use href="imeges/icons.svg"></use>
+                        <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
@@ -340,7 +340,7 @@
                         width="16"
                         height="16"
                       >
-                        <use href="imeges/icons.svg"></use>
+                        <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
                   </li>
@@ -350,7 +350,7 @@
             <li class="section-three-items">
               <img
                 class="section-photo"
-                src="imeges/daniel.jpg"
+                src="./imeges/Daniel.jpg"
                 alt="UI Designer"
                 width="264"
               />
@@ -368,7 +368,7 @@
                         width="16"
                         height="16"
                       >
-                        <use href="imeges/icons.svg"></use>
+                        <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
@@ -382,7 +382,7 @@
                         width="16"
                         height="16"
                       >
-                        <use href="imeges/icons.svg"></use>
+                        <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
@@ -396,7 +396,7 @@
                         width="16"
                         height="16"
                       >
-                        <use href="imeges/icons.svg"></use>
+                        <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
@@ -410,7 +410,7 @@
                         width="16"
                         height="16"
                       >
-                        <use href="imeges/icons.svg"></use>
+                        <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
                   </li>
@@ -431,7 +431,7 @@
               <div class="list-app-photo">
                 <img
                   class="section-photo"
-                  src="imeges/img-1.jpg"
+                  src="./imeges/img1.jpg"
                   alt="Banking App"
                   width="360"
                 />
@@ -450,7 +450,7 @@
               <div class="list-app-photo">
                 <img
                   class="section-photo"
-                  src="imeges/img-2.jpg"
+                  src="./imeges/img2.jpg"
                   alt="Cashless Payment"
                   width="360"
                 />
@@ -469,7 +469,7 @@
               <div class="list-app-photo">
                 <img
                   class="section-photo"
-                  src="imeges/img-3.jpg"
+                  src="./imeges/img3.jpg"
                   alt="Meditaion App"
                   width="360"
                 />
@@ -488,7 +488,7 @@
               <div class="list-app-photo">
                 <img
                   class="section-photo"
-                  src="imeges/img-4.jpg"
+                  src="./imeges/img4.jpg"
                   alt="Taxi Service"
                   width="360"
                 />
@@ -507,7 +507,7 @@
               <div class="list-app-photo">
                 <img
                   class="section-photo"
-                  src="imeges/img-5.jpg"
+                  src="./imeges/img5.jpg"
                   alt="Screen Illustrations"
                   width="360"
                 />
@@ -526,7 +526,7 @@
               <div class="list-app-photo">
                 <img
                   class="section-photo"
-                  src="imeges/img.jpg"
+                  src="./imeges/img6.jpg"
                   alt="Online Courses"
                   width="360"
                 />
@@ -566,7 +566,7 @@
                 href="https://www.instagram.com"
               >
                 <svg class="social-media-item-footer" width="24" height="24">
-                  <use href="imeges/icons.svg"></use>
+                  <use href="./images/icons.svg#icon-instagram"></use>
                 </svg>
               </a>
             </li>
@@ -576,7 +576,7 @@
                 href="https://www.twitter.com"
               >
                 <svg class="social-media-item-footer" width="24" height="24">
-                  <use href="imeges/icons.svg"></use>
+                  <use href="./images/icons.svg#icon-twitter"></use>
                 </svg>
               </a>
             </li>
@@ -586,7 +586,7 @@
                 href="https://www.facebook.com"
               >
                 <svg class="social-media-item-footer" width="24" height="24">
-                  <use href="imeges/icons.svg"></use>
+                  <use href="./imeges/icons.svg#icon-facebook"></use>
                 </svg>
               </a>
             </li>
@@ -596,7 +596,7 @@
                 href="https://www.linkedin.com"
               >
                 <svg class="social-media-item-footer" width="24" height="24">
-                  <use href="imeges/icons.svg"></use>
+                  <use href="./imeges/icons.svg#icon-linkedin"></use>
                 </svg>
               </a>
             </li>
