--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
             <li class="section-three-items">
               <img
                 class="section-photo"
-                src="./imeges/Mark.jpg"
+                src="./images/Mark.jpg"
                 alt="Product Designer"
                 width="264"
               />
@@ -210,7 +210,7 @@
             <li class="section-three-items">
               <img
                 class="section-photo"
-                src="./imeges/Tom.jpg"
+                src="./images/Tom.jpg"
                 alt="Frontend Developer"
                 width="264"
               />
@@ -280,7 +280,7 @@
             <li class="section-three-items">
               <img
                 class="section-photo"
-                src="./imeges/Camila.jpg"
+                src="./images/Camila.jpg"
                 alt="Marketing"
                 width="264"
               />
@@ -350,7 +350,7 @@
             <li class="section-three-items">
               <img
                 class="section-photo"
-                src="./imeges/Daniel.jpg"
+                src="./images/Daniel.jpg"
                 alt="UI Designer"
                 width="264"
               />
@@ -431,7 +431,7 @@
               <div class="list-app-photo">
                 <img
                   class="section-photo"
-                  src="./imeges/img1.jpg"
+                  src="./images/img1.jpg"
                   alt="Banking App"
                   width="360"
                 />
@@ -450,7 +450,7 @@
               <div class="list-app-photo">
                 <img
                   class="section-photo"
-                  src="./imeges/img2.jpg"
+                  src="./images/img2.jpg"
                   alt="Cashless Payment"
                   width="360"
                 />
@@ -469,7 +469,7 @@
               <div class="list-app-photo">
                 <img
                   class="section-photo"
-                  src="./imeges/img3.jpg"
+                  src="./images/img3.jpg"
                   alt="Meditaion App"
                   width="360"
                 />
@@ -488,7 +488,7 @@
               <div class="list-app-photo">
                 <img
                   class="section-photo"
-                  src="./imeges/img4.jpg"
+                  src="./images/img4.jpg"
                   alt="Taxi Service"
                   width="360"
                 />
@@ -507,7 +507,7 @@
               <div class="list-app-photo">
                 <img
                   class="section-photo"
-                  src="./imeges/img5.jpg"
+                  src="./images/img5.jpg"
                   alt="Screen Illustrations"
                   width="360"
                 />
@@ -526,7 +526,7 @@
               <div class="list-app-photo">
                 <img
                   class="section-photo"
-                  src="./imeges/img6.jpg"
+                  src="./images/img6.jpg"
                   alt="Online Courses"
                   width="360"
                 />
@@ -604,5 +604,187 @@
         </div>
       </div>
     </footer>
+  </body>
+   <!--Modal-window-->
+    <div class="backdrop">
+      <div class="modal">
+        <button class="form-close-button" type="button">
+          <svg class="modal-btn-icon" width="8" height="8">
+            <use href="./images/symbol-defs.svg#icon-close-black-18dp21"></use>
+          </svg>
+        </button>
+        <p class="modal-title">Leave your contacts and we will call you back</p>
+        <form>
+          <div class="form">
+            <label class="name" for="user-name"> Name </label>
+            <div class="form-input-name">
+              <input
+                class="input-name"
+                type="text"
+                name="user-name"
+                id="user-name"
+              />
+              <svg class="input-name-icon" width="18" height="24">
+                <use
+                  href="./images/symbol-defs.svg#icon-email-black-18dp1"
+                ></use>
+              </svg>
+            </div>
+          </div>
+          <div class="form">
+            <label class="name" for="user-phone"> Phone </label>
+            <div class="form-input-name">
+              <input
+                class="input-name"
+                type="text"
+                name="user-name"
+                id="user-phone"
+              />
+              <svg class="input-name-icon" width="18" height="24">
+                <use
+                  href="./images/symbol-defs.svg#icon-phone-black-18dp1"
+                ></use>
+              </svg>
+            </div>
+          </div>
+          <div class="form">
+            <label class="name" for="user-email"> Email </label>
+            <div class="form-input-name">
+              <input
+                class="input-name"
+                type="text"
+                name="user-name"
+                id="user-email"
+              />
+              <svg class="input-name-icon" width="18" height="24">
+                <use
+                  href="./images/symbol-defs.svg#icon-email-black-18dp1"
+                ></use>
+              </svg>
+            </div>
+          </div>
+          <div class="coment">
+            <label class="name" for="user-comment"> Comment </label>
+            <textarea
+              class="coment-area"
+              name="user-comment"
+              placeholder="Text input"
+              id="user-comment"
+              cols="30"
+              rows="10"
+            ></textarea>
+          </div>
+          <div class="check-box">
+            <input
+              class="item visually-hidden"
+              value="true"
+              type="checkbox"
+              name="user-privacy"
+              id="user-privacy"
+            />
+            <label class="form-label-checkbox" for="user-privacy">
+              <span class="checkbox-icon-box">
+                <svg class="checkbox-icon" width="10" height="8">
+                  <use href="./images/sprajt.svg#icon-Checkbox"></use>
+                </svg> </span
+              >I accept the terms and conditions of the
+              <a href="" class="label-checkbox-link">Privacy Policy</a>
+            </label>
+          </div>
+          <button class="form-send-button" type="submit">Send</button>
+        </form>
+      </div>
+    </div>
+     <!--Modal-window-->
+     <div class="backdrop">
+      <div class="modal">
+        <button class="form-close-button" type="button">
+          <svg class="modal-btn-icon" width="8" height="8">
+            <use href="./images/symbol-defs.svg#icon-close-black-18dp21"></use>
+          </svg>
+        </button>
+        <p class="modal-title">Leave your contacts and we will call you back</p>
+        <form>
+          <div class="form">
+            <label class="name" for="user-name"> Name </label>
+            <div class="form-input-name">
+              <input
+                class="input-name"
+                type="text"
+                name="user-name"
+                id="user-name"
+              />
+              <svg class="input-name-icon" width="18" height="24">
+                <use
+                  href="./images/symbol-defs.svg#icon-email-black-18dp1"
+                ></use>
+              </svg>
+            </div>
+          </div>
+          <div class="form">
+            <label class="name" for="user-phone"> Phone </label>
+            <div class="form-input-name">
+              <input
+                class="input-name"
+                type="text"
+                name="user-name"
+                id="user-phone"
+              />
+              <svg class="input-name-icon" width="18" height="24">
+                <use
+                  href="./images/symbol-defs.svg#icon-phone-black-18dp1"
+                ></use>
+              </svg>
+            </div>
+          </div>
+          <div class="form">
+            <label class="name" for="user-email"> Email </label>
+            <div class="form-input-name">
+              <input
+                class="input-name"
+                type="text"
+                name="user-name"
+                id="user-email"
+              />
+              <svg class="input-name-icon" width="18" height="24">
+                <use
+                  href="./images/symbol-defs.svg#icon-email-black-18dp1"
+                ></use>
+              </svg>
+            </div>
+          </div>
+          <div class="coment">
+            <label class="name" for="user-comment"> Comment </label>
+            <textarea
+              class="coment-area"
+              name="user-comment"
+              placeholder="Text input"
+              id="user-comment"
+              cols="30"
+              rows="10"
+            ></textarea>
+          </div>
+          <div class="check-box">
+            <input
+              class="item visually-hidden"
+              value="true"
+              type="checkbox"
+              name="user-privacy"
+              id="user-privacy"
+            />
+            <label class="form-label-checkbox" for="user-privacy">
+              <span class="checkbox-icon-box">
+                <svg class="checkbox-icon" width="10" height="8">
+                  <use href="./images/sprajt.svg#icon-Checkbox"></use>
+                </svg> </span
+              >I accept the terms and conditions of the
+              <a href="" class="label-checkbox-link">Privacy Policy</a>
+            </label>
+          </div>
+          <button class="form-send-button" type="submit">Send</button>
+        </form>
+      </div>
+    </div>
+
   </body>
 </html>
